Bug 270345 - URL parser recognizes addresses starting with http:// or https:// only
Summary: URL parser recognizes addresses starting with http:// or https:// only
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-07 19:12 UTC by Kai Uwe Broulik
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-04-07 19:12:12 UTC
Version:           git-latest (using KDE 4.6.1) 
OS:                Linux

The only addresses the URL parser accepts are:
http://example.com/parameters/?everything=is&fine=here#andso
and it accepts whatever special character there may be (German Umlauts, %, #, comma etc which is really good) BUT:
It only marks an URL as clickable link if it is preceded by a http://
So if you enter www.kde.org it will not make it clickable. http://kde.org or https://kde.org works though.
Also, ftp:// is not recognized. (Not to mention fish, smb, etc but those aren‘t important).
E-Mail adresses are also not clickable.

Reproducible: Always
Comment 1 Lasse Liehu 2011-04-07 19:32:40 UTC
I just noticed a message like:

"http://www.kde.org
foobar foo" (in HTML "http://www.kde.org<br/>foobar")

will become like this in HTML:
"<a href="http://www.kde.org">http://www.kde.org<br/>foobar</a> foo"

because the newline "<br/>" is parsed as being part of the url.
Comment 2 Francesco Nwokeka 2011-04-11 14:41:05 UTC
Git commit a2ccf85e6cb3be91f8033c9f3b93235910c545f2 by Francesco Nwokeka.
Committed on 11/04/2011 at 14:51.
Pushed by nwokeka into branch 'master'.

Fix bug 270345 : URL parser recognizes addresses starting with http:// or https:// only

now smb, ftp links are detected as well

BUG: 270345
REVIEW: David Edmundson

M  +14   -2    lib/adium-theme-view.cpp     

http://commits.kde.org/telepathy-chat-handler/a2ccf85e6cb3be91f8033c9f3b93235910c545f2