Fix bug 270345 : URL parser recognizes addresses starting with http:// or https:// only

now smb, ftp links are detected as well

BUG: 270345
REVIEW: David Edmundson